# serializer version: 1
# name: test_all_mappings
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": "Verfügung erstellt",
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": true,
      "applicant": [
          {
              "company": "",
              "email": "manfred@mapper.ch",
              "first_name": "Manfred",
              "is_juristic_person": false,
              "last_name": "Mapper",
              "phone": "076 331 9446",
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          },
          {
              "company": "",
              "email": "manu@mapper.ch",
              "first_name": "Manuela",
              "is_juristic_person": false,
              "last_name": "Mapper",
              "phone": "",
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          }
      ],
      "application_type": "Ordentlich",
      "attachments": null,
      "building": [
          {
              "egid": "2345",
              "insurance_number": "1234"
          },
          {
              "egid": "4567",
              "insurance_number": "3456"
          }
      ],
      "building_envelope_exterior_wall_color": "grün",
      "building_envelope_exterior_wall_material": "Beton",
      "building_envelope_roof_covering_color": "dunkelgrau",
      "building_envelope_roof_covering_material": "Schiefer",
      "building_heating_existing": true,
      "building_heating_new": true,
      "building_heating_new_kw": "2000",
      "building_heating_none": true,
      "building_heating_replacement": true,
      "building_heating_replacement_kw": "1000",
      "building_heating_type_district": true,
      "building_heating_type_electric": true,
      "building_heating_type_gas": true,
      "building_heating_type_heatpump": true,
      "building_heating_type_heatpump_air": true,
      "building_heating_type_heatpump_ground_water": true,
      "building_heating_type_oil": true,
      "building_heating_type_oil_new": true,
      "building_heating_type_other": true,
      "building_heating_type_other_text": "was ganz anderes",
      "building_heating_type_wood": true,
      "building_heating_unknown": true,
      "building_heating_unknown_explanation": "Some text here",
      "caluma_form_id": null,
      "cantonal_id": "BVUAFB.21.104",
      "city": "Aarau",
      "commercial_and_industrial_sector": "Telekommunikation",
      "commercial_and_industrial_type_of_use": "Gewerbe",
      "commercial_and_industrial_use": true,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [
          {
              "e": 1240872.0,
              "n": 2635136.0
          }
      ],
      "cost_building_without_land": 1700000.0,
      "cost_environmental_works": 40000.0,
      "cost_total": 1740000.0,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "decision_date": null,
      "description": "Dies ist eine detaillierte Beschreibung",
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_type": [
          {
              "value": "Baugesuch"
          },
          {
              "value": "Umweltverträglichkeitsprüfung (UVP)"
          }
      ],
      "environmental_contaminated_site_affected": true,
      "environmental_energy_certificate_required": true,
      "environmental_geothermal_probes_planned": true,
      "environmental_groundwater_intervention_required": true,
      "environmental_material_extraction_planned": true,
      "environmental_noise_protection_required": true,
      "environmental_sewer_construction_or_change": true,
      "environmental_soil_intervention_planned": true,
      "environmental_solar_installation_planned": true,
      "environmental_special_drilling_or_pump_tests": true,
      "existing_livestock": "50",
      "existing_mandatory_spaces": "2",
      "existing_non_mandatory_spaces": "3",
      "existing_parking_spaces": "1",
      "final_approval_date": null,
      "forest_min_distance_reasoning": "Grund der Unterschreitung",
      "forest_min_distance_undershot": true,
      "forest_project_in_forest": true,
      "id": "EBPA-0001-6924",
      "instance_state": null,
      "invoice_recipient": [
          {
              "company": "",
              "email": "invoices@mapper.ch",
              "first_name": "Invoice",
              "is_juristic_person": false,
              "last_name": "Recipient",
              "phone": "",
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          }
      ],
      "landowner": [
          {
              "company": "Grundbesitzer AG",
              "email": "gero.grund@grundbesitz.com",
              "first_name": "Gero",
              "is_juristic_person": true,
              "last_name": "Grund",
              "phone": "",
              "street": "Gundeldingerstr.",
              "street_number": "1",
              "town": "Basel",
              "zip": 4000
          }
      ],
      "leased_land_total_ha": "20000",
      "legal_representative": [
          {
              "company": "",
              "email": "legal@repr.ch",
              "first_name": "Gesetzlicher",
              "is_juristic_person": false,
              "last_name": "Vertreter",
              "phone": "",
              "street": "Mappingstr.",
              "street_number": "777",
              "town": "Mappingen",
              "zip": 7777
          }
      ],
      "link": null,
      "municipal_id": "2021-344",
      "new_livestock": "75",
      "new_mandatory_spaces": "5",
      "new_non_mandatory_spaces": "6",
      "new_parking_spaces": "4",
      "notes_comments": "Famous last words",
      "other_buildings": true,
      "other_buildings_designation": "Garage",
      "other_buildings_type_of_use": "Privat",
      "other_municipalities": [
          {
              "value": "Aarburg"
          }
      ],
      "outside_building_zone_agricultural_use": true,
      "outside_building_zone_legal_nonconforming_use": true,
      "outside_building_zone_other_project": true,
      "outside_building_zone_terrain_modification": true,
      "overlapping_zone": "Überlagerte Zone",
      "owned_land_total_ha": "10000",
      "parking_affected": true,
      "plot_data": [
          {
              "egrid": null,
              "municipality": "Aarau",
              "number": "234234"
          },
          {
              "egrid": null,
              "municipality": "Aarburg",
              "number": "123123"
          }
      ],
      "profile_approval_date": "20250501",
      "profiling": true,
      "profiling_date": "20240213",
      "project_author": [
          {
              "company": "Architekturbüro Bauschön",
              "email": "schoen@bauschoen.ar",
              "first_name": "Benno",
              "is_juristic_person": true,
              "last_name": "Schön",
              "phone": "076 123 23456",
              "street": "Im schönen Ort",
              "street_number": "3",
              "town": "Belair",
              "zip": 1234
          }
      ],
      "proposal": "EFH Muster",
      "publication_date": null,
      "ratio_coverage_building_project": "1.9",
      "ratio_coverage_zone_regulation": "2.8",
      "ratio_floor_area_building_project": "3.7",
      "ratio_floor_area_zone_regulation": "6.4",
      "ratio_green_area_building_project": "5.5",
      "ratio_green_area_zone_regulation": "4.6",
      "ratio_utilization_building_project": "9.1",
      "ratio_utilization_zone_regulation": "10.0",
      "ratio_volume_building_project": "7.3",
      "ratio_volume_zone_regulation": "8.2",
      "residence": [
          {
              "number_of_residential_units": 2,
              "number_of_rooms": 2.0,
              "of_which_second_homes": 1
          },
          {
              "number_of_residential_units": 2,
              "number_of_rooms": null,
              "of_which_second_homes": null
          },
          {
              "number_of_residential_units": 3,
              "number_of_rooms": 3.0,
              "of_which_second_homes": 1
          }
      ],
      "residential_use": true,
      "responsible": null,
      "responsible_municipality": "Aarau",
      "safety_employees_affected": true,
      "safety_fire_protection_canton_required": true,
      "safety_fire_protection_communal_required": true,
      "safety_fire_protection_heating_required": true,
      "safety_flood_prone_area": true,
      "safety_incident_zone_or_infrastructure": true,
      "safety_shelter_obligation": true,
      "sewage_connection_construction": true,
      "sewage_connection_construction_presence": "nicht angeschlossen",
      "sewage_connection_property": true,
      "sewage_connection_property_presence": "bestehend",
      "special_airspace_obstacle_planned": true,
      "special_monument_or_visibility_affected": true,
      "special_public_water_body_affected": true,
      "special_use_plan": "Sondernutzungsplanung",
      "special_water_body_name": "Bodensee",
      "special_water_distance_reasoning": "Ich habe nah am Wasser gebaut",
      "special_water_distance_undershot": true,
      "special_water_intervention_planned": true,
      "stormwater_infiltration": true,
      "stormwater_infiltration_new": false,
      "stormwater_public_water": true,
      "stormwater_public_water_new": false,
      "stormwater_self_use": true,
      "stormwater_sewage": true,
      "stormwater_sewage_new": false,
      "street": "Aarau-Mapping-Str. 1",
      "street_advertising_planned": true,
      "street_highway_affected": true,
      "street_min_distance_reasoning": "Grund der Unterschreitung",
      "street_min_distance_undershot": true,
      "street_new_or_intensified_access": true,
      "street_number": "",
      "submission_reason": "Nacherfassung",
      "submit_date": "20210629",
      "usage": null,
      "usage_zone": "Nuzungszone",
      "zone_flood_hazard": true,
      "zone_seismic_compliance": "nicht erforderlich",
      "zone_sensitivity_level": "4",
      "zone_spring_capture_area": true,
      "zone_water_protection_area_au": true,
      "zone_water_protection_area_bc": true,
      "zoning_area": "innerhalb rechtskräftiger Bauzone"
  }
  '''
# ---
# name: test_empty_string
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": null,
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": null,
      "applicant": [],
      "application_type": null,
      "attachments": null,
      "building": [],
      "building_envelope_exterior_wall_color": null,
      "building_envelope_exterior_wall_material": null,
      "building_envelope_roof_covering_color": null,
      "building_envelope_roof_covering_material": null,
      "building_heating_existing": null,
      "building_heating_new": null,
      "building_heating_new_kw": null,
      "building_heating_none": null,
      "building_heating_replacement": null,
      "building_heating_replacement_kw": null,
      "building_heating_type_district": null,
      "building_heating_type_electric": null,
      "building_heating_type_gas": null,
      "building_heating_type_heatpump": null,
      "building_heating_type_heatpump_air": null,
      "building_heating_type_heatpump_ground_water": null,
      "building_heating_type_oil": null,
      "building_heating_type_oil_new": null,
      "building_heating_type_other": null,
      "building_heating_type_other_text": null,
      "building_heating_type_wood": null,
      "building_heating_unknown": null,
      "building_heating_unknown_explanation": null,
      "caluma_form_id": null,
      "cantonal_id": null,
      "city": null,
      "commercial_and_industrial_sector": null,
      "commercial_and_industrial_type_of_use": null,
      "commercial_and_industrial_use": null,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [],
      "cost_building_without_land": null,
      "cost_environmental_works": null,
      "cost_total": null,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "decision_date": null,
      "description": null,
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_type": [],
      "environmental_contaminated_site_affected": null,
      "environmental_energy_certificate_required": null,
      "environmental_geothermal_probes_planned": false,
      "environmental_groundwater_intervention_required": null,
      "environmental_material_extraction_planned": null,
      "environmental_noise_protection_required": null,
      "environmental_sewer_construction_or_change": null,
      "environmental_soil_intervention_planned": null,
      "environmental_solar_installation_planned": null,
      "environmental_special_drilling_or_pump_tests": null,
      "existing_livestock": null,
      "existing_mandatory_spaces": null,
      "existing_non_mandatory_spaces": null,
      "existing_parking_spaces": null,
      "final_approval_date": null,
      "forest_min_distance_reasoning": null,
      "forest_min_distance_undershot": null,
      "forest_project_in_forest": null,
      "id": null,
      "instance_state": null,
      "invoice_recipient": [],
      "landowner": [],
      "leased_land_total_ha": null,
      "legal_representative": [],
      "link": null,
      "municipal_id": null,
      "new_livestock": null,
      "new_mandatory_spaces": null,
      "new_non_mandatory_spaces": null,
      "new_parking_spaces": null,
      "notes_comments": null,
      "other_buildings": null,
      "other_buildings_designation": null,
      "other_buildings_type_of_use": null,
      "other_municipalities": [],
      "outside_building_zone_agricultural_use": null,
      "outside_building_zone_legal_nonconforming_use": null,
      "outside_building_zone_other_project": null,
      "outside_building_zone_terrain_modification": null,
      "overlapping_zone": null,
      "owned_land_total_ha": null,
      "parking_affected": null,
      "plot_data": [],
      "profile_approval_date": null,
      "profiling": null,
      "profiling_date": null,
      "project_author": [],
      "proposal": null,
      "publication_date": null,
      "ratio_coverage_building_project": null,
      "ratio_coverage_zone_regulation": null,
      "ratio_floor_area_building_project": null,
      "ratio_floor_area_zone_regulation": null,
      "ratio_green_area_building_project": null,
      "ratio_green_area_zone_regulation": null,
      "ratio_utilization_building_project": null,
      "ratio_utilization_zone_regulation": null,
      "ratio_volume_building_project": null,
      "ratio_volume_zone_regulation": null,
      "residence": [],
      "residential_use": null,
      "responsible": null,
      "responsible_municipality": null,
      "safety_employees_affected": null,
      "safety_fire_protection_canton_required": null,
      "safety_fire_protection_communal_required": null,
      "safety_fire_protection_heating_required": null,
      "safety_flood_prone_area": null,
      "safety_incident_zone_or_infrastructure": null,
      "safety_shelter_obligation": null,
      "sewage_connection_construction": null,
      "sewage_connection_construction_presence": null,
      "sewage_connection_property": null,
      "sewage_connection_property_presence": null,
      "special_airspace_obstacle_planned": null,
      "special_monument_or_visibility_affected": null,
      "special_public_water_body_affected": null,
      "special_use_plan": null,
      "special_water_body_name": null,
      "special_water_distance_reasoning": null,
      "special_water_distance_undershot": null,
      "special_water_intervention_planned": null,
      "stormwater_infiltration": null,
      "stormwater_infiltration_new": null,
      "stormwater_public_water": null,
      "stormwater_public_water_new": null,
      "stormwater_self_use": null,
      "stormwater_sewage": null,
      "stormwater_sewage_new": null,
      "street": null,
      "street_advertising_planned": null,
      "street_highway_affected": null,
      "street_min_distance_reasoning": null,
      "street_min_distance_undershot": null,
      "street_new_or_intensified_access": null,
      "street_number": null,
      "submission_reason": null,
      "submit_date": null,
      "usage": null,
      "usage_zone": null,
      "zone_flood_hazard": null,
      "zone_seismic_compliance": null,
      "zone_sensitivity_level": null,
      "zone_spring_capture_area": null,
      "zone_water_protection_area_au": null,
      "zone_water_protection_area_bc": null,
      "zoning_area": null
  }
  '''
# ---
# name: test_mapping_for_multiple_locations
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": null,
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": null,
      "applicant": [],
      "application_type": null,
      "attachments": null,
      "building": [
          {
              "egid": null,
              "insurance_number": null
          },
          {
              "egid": null,
              "insurance_number": null
          },
          {
              "egid": null,
              "insurance_number": null
          }
      ],
      "building_envelope_exterior_wall_color": null,
      "building_envelope_exterior_wall_material": null,
      "building_envelope_roof_covering_color": null,
      "building_envelope_roof_covering_material": null,
      "building_heating_existing": null,
      "building_heating_new": null,
      "building_heating_new_kw": null,
      "building_heating_none": null,
      "building_heating_replacement": null,
      "building_heating_replacement_kw": null,
      "building_heating_type_district": null,
      "building_heating_type_electric": null,
      "building_heating_type_gas": null,
      "building_heating_type_heatpump": null,
      "building_heating_type_heatpump_air": null,
      "building_heating_type_heatpump_ground_water": null,
      "building_heating_type_oil": null,
      "building_heating_type_oil_new": null,
      "building_heating_type_other": null,
      "building_heating_type_other_text": null,
      "building_heating_type_wood": null,
      "building_heating_unknown": null,
      "building_heating_unknown_explanation": null,
      "caluma_form_id": null,
      "cantonal_id": null,
      "city": "Möhlin",
      "commercial_and_industrial_sector": null,
      "commercial_and_industrial_type_of_use": null,
      "commercial_and_industrial_use": null,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [
          {
              "e": null,
              "n": null
          },
          {
              "e": null,
              "n": null
          }
      ],
      "cost_building_without_land": null,
      "cost_environmental_works": null,
      "cost_total": null,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "decision_date": null,
      "description": null,
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_type": [],
      "environmental_contaminated_site_affected": null,
      "environmental_energy_certificate_required": null,
      "environmental_geothermal_probes_planned": null,
      "environmental_groundwater_intervention_required": null,
      "environmental_material_extraction_planned": null,
      "environmental_noise_protection_required": null,
      "environmental_sewer_construction_or_change": null,
      "environmental_soil_intervention_planned": null,
      "environmental_solar_installation_planned": null,
      "environmental_special_drilling_or_pump_tests": null,
      "existing_livestock": null,
      "existing_mandatory_spaces": null,
      "existing_non_mandatory_spaces": null,
      "existing_parking_spaces": null,
      "final_approval_date": null,
      "forest_min_distance_reasoning": null,
      "forest_min_distance_undershot": null,
      "forest_project_in_forest": null,
      "id": null,
      "instance_state": null,
      "invoice_recipient": [],
      "landowner": [],
      "leased_land_total_ha": null,
      "legal_representative": [],
      "link": null,
      "municipal_id": null,
      "new_livestock": null,
      "new_mandatory_spaces": null,
      "new_non_mandatory_spaces": null,
      "new_parking_spaces": null,
      "notes_comments": null,
      "other_buildings": null,
      "other_buildings_designation": null,
      "other_buildings_type_of_use": null,
      "other_municipalities": [
          {
              "value": "Aarburg"
          }
      ],
      "outside_building_zone_agricultural_use": null,
      "outside_building_zone_legal_nonconforming_use": null,
      "outside_building_zone_other_project": null,
      "outside_building_zone_terrain_modification": null,
      "overlapping_zone": null,
      "owned_land_total_ha": null,
      "parking_affected": null,
      "plot_data": [],
      "profile_approval_date": null,
      "profiling": null,
      "profiling_date": null,
      "project_author": [],
      "proposal": null,
      "publication_date": null,
      "ratio_coverage_building_project": null,
      "ratio_coverage_zone_regulation": null,
      "ratio_floor_area_building_project": null,
      "ratio_floor_area_zone_regulation": null,
      "ratio_green_area_building_project": null,
      "ratio_green_area_zone_regulation": null,
      "ratio_utilization_building_project": null,
      "ratio_utilization_zone_regulation": null,
      "ratio_volume_building_project": null,
      "ratio_volume_zone_regulation": null,
      "residence": [],
      "residential_use": null,
      "responsible": null,
      "responsible_municipality": "Möhlin",
      "safety_employees_affected": null,
      "safety_fire_protection_canton_required": null,
      "safety_fire_protection_communal_required": null,
      "safety_fire_protection_heating_required": null,
      "safety_flood_prone_area": null,
      "safety_incident_zone_or_infrastructure": null,
      "safety_shelter_obligation": null,
      "sewage_connection_construction": null,
      "sewage_connection_construction_presence": null,
      "sewage_connection_property": null,
      "sewage_connection_property_presence": null,
      "special_airspace_obstacle_planned": null,
      "special_monument_or_visibility_affected": null,
      "special_public_water_body_affected": null,
      "special_use_plan": null,
      "special_water_body_name": null,
      "special_water_distance_reasoning": null,
      "special_water_distance_undershot": null,
      "special_water_intervention_planned": null,
      "stormwater_infiltration": null,
      "stormwater_infiltration_new": null,
      "stormwater_public_water": null,
      "stormwater_public_water_new": null,
      "stormwater_self_use": null,
      "stormwater_sewage": null,
      "stormwater_sewage_new": null,
      "street": "Musterstrasse",
      "street_advertising_planned": null,
      "street_highway_affected": null,
      "street_min_distance_reasoning": null,
      "street_min_distance_undershot": null,
      "street_new_or_intensified_access": null,
      "street_number": "1",
      "submission_reason": null,
      "submit_date": null,
      "usage": null,
      "usage_zone": null,
      "zone_flood_hazard": null,
      "zone_seismic_compliance": null,
      "zone_sensitivity_level": null,
      "zone_spring_capture_area": null,
      "zone_water_protection_area_au": null,
      "zone_water_protection_area_bc": null,
      "zoning_area": null
  }
  '''
# ---
# name: test_simple_mapping
  '''
  {
      "_meta": {
          "errors": [],
          "instance": null,
          "missing": [],
          "target_state": "Verfügung erstellt",
          "warnings": [],
          "workflow": null
      },
      "agricultural_use": null,
      "applicant": [],
      "application_type": null,
      "attachments": null,
      "building": [
          {
              "egid": null,
              "insurance_number": null
          }
      ],
      "building_envelope_exterior_wall_color": null,
      "building_envelope_exterior_wall_material": null,
      "building_envelope_roof_covering_color": null,
      "building_envelope_roof_covering_material": null,
      "building_heating_existing": null,
      "building_heating_new": null,
      "building_heating_new_kw": null,
      "building_heating_none": null,
      "building_heating_replacement": null,
      "building_heating_replacement_kw": null,
      "building_heating_type_district": null,
      "building_heating_type_electric": null,
      "building_heating_type_gas": null,
      "building_heating_type_heatpump": null,
      "building_heating_type_heatpump_air": null,
      "building_heating_type_heatpump_ground_water": null,
      "building_heating_type_oil": null,
      "building_heating_type_oil_new": null,
      "building_heating_type_other": null,
      "building_heating_type_other_text": null,
      "building_heating_type_wood": null,
      "building_heating_unknown": null,
      "building_heating_unknown_explanation": null,
      "caluma_form_id": null,
      "cantonal_id": "BVUAFB.21.104",
      "city": "Möhlin",
      "commercial_and_industrial_sector": null,
      "commercial_and_industrial_type_of_use": null,
      "commercial_and_industrial_use": null,
      "completion_date": null,
      "construction_start_date": null,
      "coordinates": [
          {
              "e": 2480000.0,
              "n": 1300000.0
          }
      ],
      "cost_building_without_land": null,
      "cost_environmental_works": null,
      "cost_total": null,
      "creation_date": null,
      "custom_1": null,
      "custom_2": null,
      "decision_date": null,
      "description": null,
      "dossier_file_path": null,
      "dossier_number": null,
      "dossier_type": [],
      "environmental_contaminated_site_affected": null,
      "environmental_energy_certificate_required": null,
      "environmental_geothermal_probes_planned": null,
      "environmental_groundwater_intervention_required": null,
      "environmental_material_extraction_planned": null,
      "environmental_noise_protection_required": null,
      "environmental_sewer_construction_or_change": null,
      "environmental_soil_intervention_planned": null,
      "environmental_solar_installation_planned": null,
      "environmental_special_drilling_or_pump_tests": null,
      "existing_livestock": null,
      "existing_mandatory_spaces": null,
      "existing_non_mandatory_spaces": null,
      "existing_parking_spaces": null,
      "final_approval_date": null,
      "forest_min_distance_reasoning": null,
      "forest_min_distance_undershot": null,
      "forest_project_in_forest": null,
      "id": "EBPA-0001-6924",
      "instance_state": null,
      "invoice_recipient": [],
      "landowner": [],
      "leased_land_total_ha": null,
      "legal_representative": [],
      "link": null,
      "municipal_id": "2021-344",
      "new_livestock": null,
      "new_mandatory_spaces": null,
      "new_non_mandatory_spaces": null,
      "new_parking_spaces": null,
      "notes_comments": null,
      "other_buildings": null,
      "other_buildings_designation": null,
      "other_buildings_type_of_use": null,
      "other_municipalities": [],
      "outside_building_zone_agricultural_use": null,
      "outside_building_zone_legal_nonconforming_use": null,
      "outside_building_zone_other_project": null,
      "outside_building_zone_terrain_modification": null,
      "overlapping_zone": null,
      "owned_land_total_ha": null,
      "parking_affected": null,
      "plot_data": [],
      "profile_approval_date": null,
      "profiling": null,
      "profiling_date": null,
      "project_author": [],
      "proposal": "EFH Muster",
      "publication_date": null,
      "ratio_coverage_building_project": null,
      "ratio_coverage_zone_regulation": null,
      "ratio_floor_area_building_project": null,
      "ratio_floor_area_zone_regulation": null,
      "ratio_green_area_building_project": null,
      "ratio_green_area_zone_regulation": null,
      "ratio_utilization_building_project": null,
      "ratio_utilization_zone_regulation": null,
      "ratio_volume_building_project": null,
      "ratio_volume_zone_regulation": null,
      "residence": [],
      "residential_use": null,
      "responsible": null,
      "responsible_municipality": "Möhlin",
      "safety_employees_affected": null,
      "safety_fire_protection_canton_required": null,
      "safety_fire_protection_communal_required": null,
      "safety_fire_protection_heating_required": null,
      "safety_flood_prone_area": null,
      "safety_incident_zone_or_infrastructure": null,
      "safety_shelter_obligation": null,
      "sewage_connection_construction": null,
      "sewage_connection_construction_presence": null,
      "sewage_connection_property": null,
      "sewage_connection_property_presence": null,
      "special_airspace_obstacle_planned": null,
      "special_monument_or_visibility_affected": null,
      "special_public_water_body_affected": null,
      "special_use_plan": null,
      "special_water_body_name": null,
      "special_water_distance_reasoning": null,
      "special_water_distance_undershot": null,
      "special_water_intervention_planned": null,
      "stormwater_infiltration": null,
      "stormwater_infiltration_new": null,
      "stormwater_public_water": null,
      "stormwater_public_water_new": null,
      "stormwater_self_use": null,
      "stormwater_sewage": null,
      "stormwater_sewage_new": null,
      "street": "Musterstrasse",
      "street_advertising_planned": null,
      "street_highway_affected": null,
      "street_min_distance_reasoning": null,
      "street_min_distance_undershot": null,
      "street_new_or_intensified_access": null,
      "street_number": "1",
      "submission_reason": null,
      "submit_date": "20210629",
      "usage": null,
      "usage_zone": null,
      "zone_flood_hazard": null,
      "zone_seismic_compliance": null,
      "zone_sensitivity_level": null,
      "zone_spring_capture_area": null,
      "zone_water_protection_area_au": null,
      "zone_water_protection_area_bc": null,
      "zoning_area": null
  }
  '''
# ---
